--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "faker": "^5.5.3",
     "flag-icons": "^6.15.0",
     "moment": "^2.30.1",
+    "ngx-mask": "^17.0.4",
     "ngx-scrollbar": "^13.0.3",
     "read-excel-file": "^5.7.1",
     "rxjs": "~7.5.7",
@@ -67,6 +68,7 @@
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.3"
   }
